<resources>
    <string name="app_name">LocationTrackerApp</string>
    <string name="home">Home</string>
    <string name="tracks">Tracks</string>
    <string name="settings">Settings</string>
    <string name="update_time">Update time</string>
    <string name="track_color">Track color</string>
    <string name="location">Location</string>
    <string name="update_time_summary">Location update time</string>
    <string name="update_track_color">Change track color</string>
    <string name="distance_meter">Distance %s m</string>
    <string name="distance_kilometer">Distance %s km</string>
    <string name="speed">Speed %s km/h</string>
    <string name="average_speed">Average speed %s km/h</string>
    <string name="save_this_track">Save this track?</string>
    <string name="total_time">Total time %S</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
</resources>